# oak

./: .pre-commit-config.yaml  README.md  coco.py  oak.py  pyproject.toml
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: bugs.md
.github/workflows/: pre-commit.yml
oak/: coco.py  dino.py  hubconf.py  main.py  oak.py
