[tool.poetry]
name = "oak"
version = "0.1.0"
description = "Data cleaning"
readme = "README.md"
documentation = ""
repository = "https://github.com/luca-medeiros/oak"
authors = [
  "Luca Medeiros <lucamedeiros@outlook.com>",
]
packages = [
    { include = "oak" },
]

[tool.poetry.dependencies]
python = "^3.8, <3.10"
fastdup = "^0.922"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
commitizen = "3.0.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core >= 1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py38"
line-length = 120
fix = true
select = [
    # https://github.com/charliermarsh/ruff#pyflakes-f
    "F", # Pyflakes
    # https://github.com/charliermarsh/ruff#pycodestyle-e-w
    "E", # pycodestyle
    "W", # Warning
    # https://github.com/charliermarsh/ruff#flake8-comprehensions-c4
    # https://github.com/charliermarsh/ruff#mccabe-c90
    "C", # Complexity (mccabe+) & comprehensions
    # https://github.com/charliermarsh/ruff#pyupgrade-up
    "UP", # pyupgrade
    # https://github.com/charliermarsh/ruff#isort-i
    "I", # isort
]
ignore = [
    # https://github.com/charliermarsh/ruff#pycodestyle-e-w
    "E402", # module level import not at top of file
    # https://github.com/charliermarsh/ruff#pyupgrade-up
    "UP006", # use-pep585-annotation
    "UP007", # use-pep604-annotation
    "E741", # Ambiguous variable name
]
[tool.ruff.per-file-ignores]
"__init__.py" = [
    "F401",  # unused import
    "F403",  # star imports
    ]

[tool.ruff.mccabe]
max-complexity = 24

[tool.ruff.pydocstyle]
convention = "numpy"
